...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/top"
            android:layout_above="@id/bottom"
             >

            <ListView android:id="@+id/wishList"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"/>
        </LinearLayout>
...
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnWishBack"
                android:text="Back" />

            <Button
                android:id="@+id/wishListRemove"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnDeleteWish"
                android:text="Remove" />

            <Button
                android:id="@+id/addWish"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
...
