<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddressActivity">

    <TextView
        android:id="@+id/addWishInfo"
        android:layout_width="540dp"
        android:layout_height="40dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:text="Please Add A New Wish"
        android:textSize="30dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wishBookNameTitle"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="60dp"
        android:text="Book Name"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWishInfo" />


    <EditText
        android:id="@+id/wishBookName"
        android:layout_width="440dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_style"
        android:ems="10"
        android:hint="Max length 30"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishBookNameTitle" />

    <TextView
        android:id="@+id/wishAuthorNameTitle"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="60dp"
        android:text="Author Name"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishBookName" />


    <EditText
        android:id="@+id/wishAuthorName"
        android:layout_width="440dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_style"
        android:ems="10"
        android:hint="Max length 30"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishAuthorNameTitle" />


    <Button
        android:id="@+id/addWishCancel"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/button_style"
        android:onClick="buttonNewWishCancel"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addWishSubmit"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_style"
        android:onClick="buttonNewWishSubmit"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>